--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Modern Banker</title>
+    <title>Online Banking</title>
   </head>
   <body class="position-relative container py-4">
     <div class="navbar bg-light shadow-sm row mt-2 py-3">
